manifests/base/resources/groups/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: groups
    chart: groups-3.0.3
    heritage: Helm
    release: groups
  name: groups
  namespace: $(NAMESPACE)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: groups
      release: groups
  template:
    metadata:
      annotations:
        checksum/configs: 1063e44ac1426d051a0a89ff8d6e0cb71fb070c69b056a00542c0eb3fe8f0d4e
        checksum/secrets: 248a665a806d628bcd682571099e4f4a22be7268aa3f2ae6711e6c177a84c113
      labels:
        app: groups
        release: groups
    spec:
      containers:
        - env:
            - name: KEYS_URI_TEMP
              valueFrom:
                configMapKeyRef:
                  key: keysUri
                  name: groups-configs
            - name: KEYS_URI
              value: $(KEYS_URI_TEMP)/v1/keys/qlik.api.internal
            - name: EDGE_AUTH_URI
              valueFrom:
                configMapKeyRef:
                  key: edgeAuthUri
                  name: groups-configs
            - name: TOKEN_AUTH_URI
              value: $(EDGE_AUTH_URI)/v1
            - name: MONGODB_URI_FILE
              value: /run/secrets/qlik.com/groups/mongodbUri
            - name: TOKEN_AUTH_PRIVATE_KEY_FILE
              value: /run/secrets/qlik.com/groups/tokenAuthPrivateKey
            - name: TOKEN_AUTH_PRIVATE_KEY_ID_FILE
              value: /run/secrets/qlik.com/groups/tokenAuthPrivateKeyId
            - name: INGRESS_AUTH_URL
              valueFrom:
                configMapKeyRef:
                  key: ingressAuthUrl
                  name: groups-configs
            - name: LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  key: logLevel
                  name: groups-configs
            - name: REDIS_URI
              valueFrom:
                configMapKeyRef:
                  key: redisUri
                  name: groups-configs
            - name: ENVIRONMENT
              value: qseok
            - name: REGION
              value: example
          image: qliktech-docker.jfrog.io/groups:3.1.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /live
              port: http
          name: main
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http
          volumeMounts:
            - mountPath: /run/secrets/qlik.com/groups
              name: groups-secrets
              readOnly: true
      dnsConfig:
        options:
          - name: timeout
            value: "1"
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes:
        - name: groups-secrets
          secret:
            secretName: groups-secrets
---
