manifests/base/resources/groups/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: groups
    chart: groups-3.0.0
    heritage: Helm
    release: groups
  name: groups
  namespace: $(NAMESPACE)
spec:
  ports:
  - name: groups
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: groups
    release: groups
  type: ClusterIP
---
