manifests/base/resources/groups/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://groups-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
      more_clear_input_headers "X-Forwarded-Host" "X-Forwarded-For" "X-Forwarded-Proto" "X-Original-URI" "X-Original-URL";
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: groups
    chart: groups-3.0.0
    heritage: Helm
    release: groups
  name: groups
  namespace: $(NAMESPACE)
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: groups
          servicePort: 8080
        path: /api/v1/groups
      - backend:
          serviceName: groups
          servicePort: 8080
        path: /api/v1/qlik-groups
      - backend:
          serviceName: groups
          servicePort: 8080
        path: /api/v1/idp-groups
---
